--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,8 +1,8 @@
-name: Test
+name: Checks
 on: [ push ]
 jobs:
-  test:
-    name: test
+  prepare:
+    name: pre-build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v3
@@ -16,13 +16,44 @@ jobs:
       - run: go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
       - run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
       - run: go install github.com/favadi/protoc-go-inject-tag@latest
-      - run: go get github.com/mailru/easyjson && go install github.com/mailru/easyjson/...@latest
+      - run: go install github.com/vektra/mockery/v2@latest
+
+  generate:
+    name: generate
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
       - name: generate easyjson
         run: chmod +x easyjsonGenerate.sh && bash ./easyjsonGenerate.sh
+      - name: generate test mocks
+        run: cd internal/test && chmod +x mocks.sh && bash ./mocks.sh
+
+  build:
+    name: build
+    needs: generate
+    runs-on: ubuntu-latest
+    steps:
       - name: build
         run: go build -v ./...
-      - run: go install github.com/vektra/mockery/v2@latest
+
+  golangci-lint:
+    name: lint
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          skip-pkg-cache: true
+          skip-build-cache: true
+
+  test:
+    name: test
+    needs: golangci-lint
+    runs-on: ubuntu-latest
+    steps:
       - name: go tests
         run: chmod +x test.sh && bash test.sh
