--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,7 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
-      - run: ls -la .
+      - uses: actions/checkout@v3
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && bash ./generateAll.sh
       - name: generate easyjson
@@ -36,6 +36,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -48,6 +49,7 @@ jobs:
     needs: generate
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: build
         run: go build -v ./...
 
@@ -56,5 +58,6 @@ jobs:
     needs: golangci-lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: go tests
         run: chmod +x test.sh && bash test.sh
