--- a/env/dev/airs/api.toml
+++ b/env/dev/airs/api.toml
@@ -18,7 +18,7 @@ include_ext = ["go", "yaml", "json", "js", ".sql", ".toml", "proto"]
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules", "database", "protobuf"]
 # Watch these directories if you specified.
 # Exclude files.
-exclude_file = ["docs/docs.go"]
+exclude_file = ["docs/docs.go", "docs/swagger.json"]
 # Exclude specific regular expressions.
 exclude_regex = [".pb.go"]
 # Exclude unchanged files.
