--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -198,8 +198,8 @@ services:
       - 5432
     #    volumes:
     #      - data:/var/lib/postgresql/data
-    volumes:
-      - ../../db/:/var/run/postgresql/
+  #    volumes:
+  #      - ../../db/:/var/run/postgresql/
 
   redis-exporter:
     image: oliver006/redis_exporter:alpine
