--- a/env/dev/airs/track.toml
+++ b/env/dev/airs/track.toml
@@ -9,11 +9,11 @@ tmp_dir = "tmp"
 # Just plain old shell command. You could use `make` as well.
 cmd = "bash ./cmd/track/reload.sh"
 # Binary file yields from `cmd`.
-bin = "tmp/track"
+bin = "tmp/run.track"
 # Customize binary, can setup environment variables when run your app.
 full_bin = "APP_ENV=dev APP_USER=air ./tmp/track"
 # Watch these filename extensions.
-include_ext = ["go", "yaml", "json", "js", ".sql", ".toml", "proto"]
+include_ext = ["track"]
 # Ignore these filename extensions or directories.
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules", "database", "protobuf"]
 # Watch these directories if you specified.
