WV-76: fixed hotreload, database socket

--- a/env/dev/airs/album.toml
+++ b/env/dev/airs/album.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "bash ./cmd/album/reload.sh"
+cmd = "./tmp/run.album"
 # Binary file yields from `cmd`.
 bin = "tmp/run.album"
 # Customize binary, can setup environment variables when run your app.
