--- a/env/prod/k8/postgres/db-deployment.yaml
+++ b/env/prod/k8/postgres/db-deployment.yaml
@@ -38,6 +38,6 @@ spec:
               value: wave
       restartPolicy: Always
       imagePullSecrets:
-        - name: regcred
+        - name: wave
 
 status: { }
