--- a/env/prod/k8/redis/redis-deployment.yaml
+++ b/env/prod/k8/redis/redis-deployment.yaml
@@ -30,5 +30,5 @@ spec:
             - containerPort: 6379
       restartPolicy: Always
       imagePullSecrets:
-        - name: regcred
+        - name: wave
 status: { }
