--- a/env/dev/airs/track.toml
+++ b/env/dev/airs/track.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "bash ./cmd/track/reload.sh"
+cmd = "./tmp/run.track"
 # Binary file yields from `cmd`.
 bin = "tmp/run.track"
 # Customize binary, can setup environment variables when run your app.
