--- a/env/prod/k8/api/wave-deployment.yaml
+++ b/env/prod/k8/api/wave-deployment.yaml
@@ -12,7 +12,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave
+      io.kompose.service: wave_music
   strategy:
     type: Recreate
   template:
@@ -22,7 +22,7 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave
+        io.kompose.service: wave_music
     spec:
       containers:
         - name: api
@@ -32,11 +32,11 @@ spec:
           tty: true
           env:
             - name: DATABASE_CONNECTION
-              value: user=postgres password=music dbname=wave host=10.100.150.222 port=5432 sslmode=disable
+              value: user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
             - name: DATABASE_MIGRATIONS
               value: ./db/migrations
       restartPolicy: Always
       imagePullSecrets:
-        - name: regcred
+        - name: wave
 
 status: { }
