--- a/env/prod/k8/api/wave-service.yaml
+++ b/env/prod/k8/api/wave-service.yaml
@@ -6,15 +6,14 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave
-  name: wave
+    io.kompose.service: wave_music
+  name: wave_music
 spec:
-  type: LoadBalancer
   ports:
     - name: "5000"
-      protocol: TCP
       port: 5000
       targetPort: 5000
   selector:
-    app: wave
-    io.kompose.service: wave
+    io.kompose.service: wave_music
+status:
+  loadBalancer: { }
