--- a/env/prod/k8/artist/artist-deployment.yaml
+++ b/env/prod/k8/artist/artist-deployment.yaml
@@ -41,6 +41,6 @@ spec:
               value: :8082
       restartPolicy: Always
       imagePullSecrets:
-        - name: regcred
+        - name: wave
 
 status: { }
