--- a/env/prod/k8/postgres/Dockerfile
+++ b/env/prod/k8/postgres/Dockerfile
@@ -1,6 +1,7 @@
 FROM postgres:13
 
-COPY db/ /var/run/postgresql/
-
-EXPOSE 5432
-
+RUN ls . -a
+COPY db/migrations/1.0.0-initial_schema/ /docker-entrypoint-initdb.d/
+ENV POSTGRES_USER postgres
+ENV POSTGRES_PASSWORD music
+ENV POSTGRES_DB wave
