--- a/env/prod/k8/user/user-deployment.yaml
+++ b/env/prod/k8/user/user-deployment.yaml
@@ -39,5 +39,7 @@ spec:
               value: :9086
             - name: port
               value: :8086
+      imagePullSecrets:
+        - name: wave
 
 status: { }
