--- a/env/prod/k8/web/web-deployment.yaml
+++ b/env/prod/k8/web/web-deployment.yaml
@@ -1,35 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f ../docker-compose.yaml
-    kompose.version: 1.26.1 (a9d05d509)
-  creationTimestamp: null
+  name: godeploy
   labels:
-    io.kompose.service: web
-  name: web
+    app: godeploy
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: web
-  strategy:
-    type: Recreate
+      app: godeploy
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert -f ../docker-compose.yaml
-        kompose.version: 1.26.1 (a9d05d509)
-      creationTimestamp: null
       labels:
-        io.kompose.service: web
+        app: godeploy
     spec:
       containers:
-        - image: mausved/wave_web
-          name: nginx
+        - name: godeploy
+          image: mausved/wave_web
           ports:
             - containerPort: 80
       imagePullSecrets:
-        - name: regcred
-      restartPolicy: Always
-status: { }
+        - name: wave
