--- a/env/prod/k8/api/wave-deployment.yaml
+++ b/env/prod/k8/api/wave-deployment.yaml
@@ -12,7 +12,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave_music
+      io.kompose.service: wave
   strategy:
     type: Recreate
   template:
@@ -22,7 +22,7 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave_music
+        io.kompose.service: wave
     spec:
       containers:
         - name: api
