--- a/env/prod/k8/api/wave-service.yaml
+++ b/env/prod/k8/api/wave-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave_music
-  name: wave_music
+    io.kompose.service: wave
+  name: wave
 spec:
   ports:
     - name: "5000"
       port: 5000
       targetPort: 5000
   selector:
-    io.kompose.service: wave_music
+    io.kompose.service: wave
 status:
   loadBalancer: { }
