--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -6,9 +6,6 @@ events {
 
 
 http {
-# upstream main {
-#    server main:5000;
-#  }
 
   map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -31,15 +28,12 @@ http {
   include servers/*;
 
 
-
 server {
   root /var/www/wave;
   listen 80;
 
   server_name wave-music.online www.wave-music.online;
   return 301 https://wave-music.online$request_uri;
-  #server_name wave.com www.wave.com;
-
 
   location / {
     include  /etc/nginx/mime.types;
@@ -51,7 +45,7 @@ server {
   }
 
   location /monitoring/prometheus/ {
-    proxy_pass http://caddy:9090;
+    proxy_pass http://caddy.default.svc.cluster.local:9090;
   }
 
   location /monitoring/grafana/ {
@@ -60,18 +54,17 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $http_host;
-    proxy_pass http://caddy:3000;
+    proxy_pass http://caddy.default.svc.cluster.local:3000;
   }
 
   location /api {
-     proxy_pass http://wave_music:5000;
+     proxy_pass http://wave.default.svc.cluster.local:5000;
   }
 
   location ^~ /docs/ {
       index index.html;
-      proxy_pass http://wave_music:5000/docs/;
+      proxy_pass http://wave.default.svc.cluster.local:5000/docs/;
   }
-
 
   location /metrics {
       stub_status on;
@@ -82,7 +75,6 @@ server {
   root /var/www/wave;
   listen 443 ssl default_server;
   server_name wave-music.online www.wave-music.online;
-  #server_name wave.com www.wave.com;
   ssl_session_cache   shared:SSL:2m;
   ssl_session_timeout 6h;
   ssl_certificate      /var/www/certs/fullchain.pem;
@@ -108,16 +100,16 @@ server {
   }
 
   location /api {
-     proxy_pass http://wave_music:5000;
+     proxy_pass http://wave.default.svc.cluster.local:5000;
   }
 
   location ^~ /docs/ {
       index index.html;
-      proxy_pass http://wave_music:5000/docs/;
+      proxy_pass http://wave.default.svc.cluster.local:5000/docs/;
   }
 
   location /monitoring/prometheus/ {
-    proxy_pass http://caddy:9090;
+    proxy_pass http://caddy.default.svc.cluster.local:9090;
   }
 
   location /monitoring/grafana/ {
@@ -126,7 +118,7 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $http_host;
-    proxy_pass http://caddy:3000;
+    proxy_pass http://caddy.default.svc.cluster.local:3000;
   }
 
 }
