--- a/env/prod/k8/caddy/caddy-deployment.yaml
+++ b/env/prod/k8/caddy/caddy-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave
-  name: wave
+    io.kompose.service: caddy
+  name: caddy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave
+      io.kompose.service: caddy
   strategy:
     type: Recreate
   template:
@@ -22,16 +22,22 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave
+        io.kompose.service: caddy
     spec:
       containers:
-        - name: api
-          image: mausved/wave_api
+        - env:
+            - name: ADMIN_PASSWORD
+            - name: ADMIN_USER
+          image: mausved/wave_caddy
+          name: caddy
           ports:
-            - containerPort: 5000
-          tty: true
+            - containerPort: 9093
+            - containerPort: 9091
+            - containerPort: 9121
+            - containerPort: 3000
+            - containerPort: 9090
+            - containerPort: 9113
       restartPolicy: Always
       imagePullSecrets:
         - name: wave
-
 status: { }
