--- a/env/prod/k8/cadvisor/cadvisor-deployment.yaml
+++ b/env/prod/k8/cadvisor/cadvisor-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave
-  name: wave
+    io.kompose.service: cadvisor
+  name: cadvisor
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave
+      io.kompose.service: cadvisor
   strategy:
     type: Recreate
   template:
@@ -22,16 +22,14 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave
+        io.kompose.service: cadvisor
     spec:
       containers:
-        - name: api
-          image: mausved/wave_api
+        - image: mausved/wave_cadvisor
+          name: cadvisor
           ports:
-            - containerPort: 5000
-          tty: true
+            - containerPort: 8080
       restartPolicy: Always
       imagePullSecrets:
         - name: wave
-
 status: { }
