--- a/env/prod/k8/grafana/grafana-deployment.yaml
+++ b/env/prod/k8/grafana/grafana-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave
-  name: wave
+    io.kompose.service: grafana
+  name: grafana
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave
+      io.kompose.service: grafana
   strategy:
     type: Recreate
   template:
@@ -22,16 +22,21 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave
+        io.kompose.service: grafana
     spec:
       containers:
-        - name: api
-          image: mausved/wave_api
+        - env:
+            - name: ADMIN_PASSWORD
+            - name: ADMIN_USER
+            - name: GF_SECURITY_ADMIN_PASSWORD
+            - name: GF_SECURITY_ADMIN_USER
+            - name: GF_USERS_ALLOW_SIGN_UP
+              value: "false"
+          image: mausved/wave_grafana
+          name: grafana
           ports:
-            - containerPort: 5000
-          tty: true
+            - containerPort: 3000
       restartPolicy: Always
       imagePullSecrets:
         - name: wave
-
 status: { }
