--- a/env/prod/k8/grafana/grafana-service.yaml
+++ b/env/prod/k8/grafana/grafana-service.yaml
@@ -6,19 +6,14 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: nginx
-  name: nginx
+    io.kompose.service: grafana
+  name: grafana
 spec:
   ports:
-    - name: "http"
-      port: 80
-      targetPort: 80
-      protocol: "TCP"
-    - name: "https"
-      port: 443
-      targetPort: 443
-      protocol: "TCP"
+    - name: "3000"
+      port: 3000
+      targetPort: 3000
   selector:
-    io.kompose.service: nginx
+    io.kompose.service: grafana
 status:
   loadBalancer: { }
