--- a/env/prod/k8/nodeexporter/nodeexporter-deployment.yaml
+++ b/env/prod/k8/nodeexporter/nodeexporter-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: wave
-  name: wave
+    io.kompose.service: nodeexporter
+  name: nodeexporter
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: wave
+      io.kompose.service: nodeexporter
   strategy:
     type: Recreate
   template:
@@ -22,16 +22,19 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: wave
+        io.kompose.service: nodeexporter
     spec:
       containers:
-        - name: api
-          image: mausved/wave_api
+        - args:
+            - --path.procfs=/host/proc
+            - --path.rootfs=/rootfs
+            - --path.sysfs=/host/sys
+            - --collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)
+          image: mausved/wave_nodeexporter
+          name: nodeexporter
           ports:
-            - containerPort: 5000
-          tty: true
+            - containerPort: 9100
       restartPolicy: Always
       imagePullSecrets:
         - name: wave
-
 status: { }
