--- a/env/prod/k8/redis-exporter/redis-exporter-service.yaml
+++ b/env/prod/k8/redis-exporter/redis-exporter-service.yaml
@@ -6,19 +6,14 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: nginx
-  name: nginx
+    io.kompose.service: redis-exporter
+  name: redis-exporter
 spec:
   ports:
-    - name: "http"
-      port: 80
-      targetPort: 80
-      protocol: "TCP"
-    - name: "https"
-      port: 443
-      targetPort: 443
-      protocol: "TCP"
+    - name: "9121"
+      port: 9121
+      targetPort: 9121
   selector:
-    io.kompose.service: nginx
+    io.kompose.service: redis-exporter
 status:
   loadBalancer: { }
