--- a/metrics/caddy/Caddyfile
+++ b/metrics/caddy/Caddyfile
@@ -2,44 +2,44 @@
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy db:5432
+    reverse_proxy db.default.svc.cluster.local:5432
 }
 
 :9090 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy prometheus:9090
+    reverse_proxy prometheus.default.svc.cluster.local:9090
 }
 
 :9093 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy alertmanager:9093
+    reverse_proxy alertmanager.default.svc.cluster.local:9093
 }
 
 :9091 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy pushgateway:9091
+    reverse_proxy pushgateway.default.svc.cluster.local:9091
 }
 
 :9121 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy redis-exporter:9121
+    reverse_proxy redis-exporter.default.svc.cluster.local:9121
 }
 
 :9187 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD}
     }
-    reverse_proxy postgres-exporter:9187
+    reverse_proxy postgres-exporter.default.svc.cluster.local:9187
 }
 
 :3000 {
-    reverse_proxy grafana:3000
+    reverse_proxy grafana.default.svc.cluster.local:3000
 }
