--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -36,11 +36,13 @@ server {
   return 301 https://wave-music.online$request_uri;
 
   location / {
+    proxy_pass http://nodejs.default.svc.cluster.local:8095;
     include  /etc/nginx/mime.types;
     gzip            on;
 
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
+
     try_files $uri $uri/ /index.html;
   }
 
