WV-76: trigger CI secrets avoid

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -121,7 +121,7 @@ jobs:
           export PATH="~/.local/bin/kubectl:$PATH"
           kubectl version --client --output=yaml
       - name: create config
-        run: echo ${{ secrets.K8S_CONFIG }} > k8s.yaml && cat k8s.yaml
+        run: echo "${{ secrets.K8S_CONFIG }}" > k8s.yaml && cat k8s.yaml
       - name: create token
         run: kubectl get secret $(kubectl get sa dashboard-sa -o jsonpath='{.secrets[0].name}') -o jsonpath='{.data.token}' | base64 --decode > token
       - name: export config
