WV-76: added pwd to KUBECONFIG

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -123,7 +123,7 @@ jobs:
       - name: create config
         run: echo "${{ secrets.K8S_CONFIG }}" > k8s.yaml
       - name: export config
-        run: export KUBECONFIG="./k8s.yaml" && echo ${KUBECONFIG}
+        run: export KUBECONFIG="$(pwd)/k8s.yaml" && echo ${KUBECONFIG}
       - name: create token
         run: kubectl get secret $(kubectl get sa dashboard-sa -o jsonpath='{.secrets[0].name}') -o jsonpath='{.data.token}' | base64 --decode > token
       - name: apply all
