WV-76: added nodejs deployment and fixed CI

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -36,14 +36,13 @@ server {
   return 301 https://wave-music.online$request_uri;
 
   location / {
-    proxy_pass http://nodejs.default.svc.cluster.local:8095;
     include  /etc/nginx/mime.types;
     gzip            on;
-
+    proxy_pass http://nodejs.default.svc.cluster.local:8080;
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
 
-    try_files $uri $uri/ /index.html;
+#     try_files $uri $uri/ /index.html;
   }
 
   location /monitoring/prometheus/ {
@@ -85,6 +84,7 @@ server {
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options "nosniff";
   add_header X-XSS-Protection "1; mode=block";
+  underscores_in_headers on;
 
   ssl_prefer_server_ciphers On;
   ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
@@ -95,10 +95,14 @@ server {
   location / {
     include  /etc/nginx/mime.types;
     gzip            on;
-
+    proxy_set_header                Host wave-music.online;
+#     proxy_set_header                HTTP_Country-Code $geoip_country_code;
+    proxy_pass_request_headers      on;
+    proxy_pass http://nodejs.default.svc.cluster.local:8080;
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
-    try_files $uri $uri/ /index.html;
+
+#     try_files $uri $uri/ /index.html;
   }
 
   location /api {
