WV-76: remove nodejs and add chmod

--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -106,7 +106,7 @@ jobs:
         run: cd deploy && chmod +x dockerBuildAll.sh && ./dockerBuildAll.sh
       - name: Push all Docker images
         run:
-          cd deploy && chmod +x dockerBuildAll.sh && ./dockerPushAll.sh
+          cd deploy && chmod +x dockerPushAll.sh && ./dockerPushAll.sh
 
   k8s:
     runs-on: ubuntu-latest
